--- a/public/css/output.css
+++ b/public/css/output.css
@@ -635,10 +635,6 @@ video {
   display: block;
 }
 
-.inline-block {
-  display: inline-block;
-}
-
 .inline {
   display: inline;
 }
@@ -1066,10 +1062,19 @@ h1 {
   line-height: 1.25rem;
 }
 
+#mensajes {
+  overflow-y: auto;
+  word-wrap: break-word;
+  white-space: pre-wrap;
+}
+
 #mensaje {
   overflow-y: auto;
+  overflow-x: hidden;
   max-height: 150px;
   resize: none;
+  word-wrap: break-word;
+  white-space: normal;
 }
 
 .button-send {
